fix mobile chrome layout issue

--- a/app/web/src/App.css
+++ b/app/web/src/App.css
@@ -15,17 +15,17 @@
 
 body {
   height: var(--vh, 100vh);
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-size: calc(15px + 2.5vmin);
   /* color: white; */
 }
 
 #root {
   display: flex;
-  height: 100vh;
+  /* height: 100vh; */
   flex: 1;
 }
 
